force-app/main/default/objects/Booking__c/fields/Banker_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Banker_Contact_Person__c</fullName>
    <description>Banker contact person for the home loan; used as recipient for Bank-side demand letters.</description>
    <label>Banker Contact Person</label>
    <length>120</length>
    <type>Text</type>
</CustomField>