force-app/main/default/objects/Booking__c/fields/Customer_Account_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Holder_Name__c</fullName>
    <description>Customer bank account holder name. Used for refund routing and bank-side validations.</description>
    <label>Customer Account Holder Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>