force-app/main/default/objects/Booking__c/fields/Customer_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Number__c</fullName>
    <description>Customer bank account number for refund routing.</description>
    <label>Customer Account Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>