force-app/main/default/objects/Booking__c/fields/Customer_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Bank_Name__c</fullName>
    <description>Customer bank name for refund routing.</description>
    <label>Customer Bank Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>