force-app/main/default/objects/Booking__c/fields/Customer_Branch__c.field-meta.xml
<CustomField>
    <fullName>Customer_Branch__c</fullName>
    <description>Customer bank branch for refund routing.</description>
    <label>Customer Branch</label>
    <length>120</length>
    <type>Text</type>
</CustomField>