force-app/main/default/objects/Booking__c/fields/Customer_IFSC__c.field-meta.xml
<CustomField>
    <fullName>Customer_IFSC__c</fullName>
    <description>Customer bank IFSC code for refund routing.</description>
    <label>Customer IFSC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>