force-app/main/default/objects/Booking__c/fields/Deficit__c.field-meta.xml
<CustomField>
    <fullName>Deficit__c</fullName>
    <description>Prorata deficit: Total Flat Cost minus Customer Margin minus Loan Sanctioned Amount. Sum of Customer_Flat_Prorata__c across milestones must equal this value.</description>
    <formula>NULLVALUE(Total_Flat_Cost__c, 0) - NULLVALUE(Customer_Margin__c, 0) - NULLVALUE(Loan_Sanctioned_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deficit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>