force-app/main/default/objects/Booking__c/fields/Loan_Final_Demand_Note__c.field-meta.xml
<CustomField>
    <fullName>Loan_Final_Demand_Note__c</fullName>
    <description>Free-text note captured for loan-case registration. Rendered on the Sale Deed document.</description>
    <label>Loan Final Demand Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>