force-app/main/default/objects/Booking__c/fields/Loan_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Loan_Remarks__c</fullName>
    <description>Free-text remarks captured against the loan section of the Booking.</description>
    <label>Loan Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>