force-app/main/default/objects/Booking__c/fields/Loan_Sanction_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Sanction_Number__c</fullName>
    <description>Bank-issued loan sanction reference number. BRD section 4.</description>
    <label>Loan Sanction Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>