force-app/main/default/objects/Booking__c/fields/Sale_Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>Sale_Agreement_Status__c</fullName>
    <description>Lifecycle status of the Sale Agreement document. Must be Completed before stage can move past Agreement.</description>
    <label>Sale Agreement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>