force-app/main/default/objects/Booking__c/fields/Scheme_Loan__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Loan__c</fullName>
    <description>Scheme loan variant. Picklist values are managed via Scheme Loan custom metadata for project-level configuration.</description>
    <label>Scheme Loan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Subvention</fullName>
            </value>
            <value>
                <fullName>MaxGain</fullName>
            </value>
            <value>
                <fullName>Step-Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>